# reeln-plugin-streamn-scoreboard

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
streamn_scoreboard_plugin/: __init__.py  plugin.py  sport_mapping.py  writer.py
tests/: conftest.py
tests/unit/: test_plugin.py  test_sport_mapping.py  test_writer.py
