[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reeln-plugin-streamn-scoreboard"
dynamic = ["version"]
description = "reeln-cli plugin that bridges game init to OBS scoreboard text files"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "reeln @ git+https://github.com/StreamnDad/reeln-cli",
]

[project.urls]
Homepage = "https://streamn.dad"
Repository = "https://github.com/StreamnDad/reeln-plugin-streamn-scoreboard"
Changelog = "https://github.com/StreamnDad/reeln-plugin-streamn-scoreboard/blob/main/CHANGELOG.md"
Issues = "https://github.com/StreamnDad/reeln-plugin-streamn-scoreboard/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
]

[project.entry-points."reeln.plugins"]
streamn-scoreboard = "streamn_scoreboard_plugin:ScoreboardPlugin"

[tool.hatch.build.targets.wheel]
packages = ["streamn_scoreboard_plugin"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "streamn_scoreboard_plugin/__init__.py"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "reeln.*"
ignore_missing_imports = true
